--- a/Kubernetes-Manifests-file/Frontend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Frontend/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: frontend
-        image: 407622020962.dkr.ecr.us-east-1.amazonaws.com/text-p/frontend:23
+        image: 767397952656.dkr.ecr.us-west-2.amazonaws.com/text-p/frontend:23
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
