--- a/Kubernetes-Manifests-file/Backend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Backend/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: api
-        image: 407622020962.dkr.ecr.us-east-1.amazonaws.com/text-p/backend:3
+        image: 767397952656.dkr.ecr.us-west-2.amazonaws.com/text-p/backend:3
         imagePullPolicy: Always
         env:
           - name: MONGO_CONN_STR
